[package]
name = "leptos-actix-middleware"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# stay on stable
leptos = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
leptos-use = { version = "0.10", features = ["serde"] }
cookie = "0.18"
# this version must equal to cargo-leptos(wasm-bingen-cli-support)
wasm-bindgen = "0.2.92"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0"
chrono = { version = "0", features = ["serde"] }

# logging
log = "0"

# server-side only
leptos_actix = { version = "0.6", optional = true }
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
thiserror = { version = "1", optional = true }
tokio = { version = "1", optional = true, features = ["sync", "macros", "rt-multi-thread", "process", "fs"] }
simple_logger= { version = "4", optional = true }


# client-side only
console_error_panic_hook = { version = "0", optional = true } # frontend panic
console_log = { version = "1", optional = true, features = ["color"] } # frontend logger
gloo = { version = "0", optional = true }

[features]
csr = [
    "leptos/csr", 
    "leptos_meta/csr", 
    "leptos_router/csr",
    "dep:console_error_panic_hook",
    "dep:console_log",
    "dep:gloo",
]
hydrate = [
    "leptos/hydrate", 
    "leptos_meta/hydrate", 
    "leptos_router/hydrate",
    "dep:console_error_panic_hook",
    "dep:console_log",
    "dep:gloo",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "leptos-use/actix",
    "dep:actix-files",
    "dep:actix-web",
    "dep:leptos_actix",
    "dep:thiserror",
    "dep:tokio",
    "dep:simple_logger",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "leptos-actix-middleware"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
